[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-nm-releng"
description = "A pytest plugin providing custom functionality for the Neural Magic release engineering team."
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Domenic Barbuzzi", email = "domenic@neuralmagic.com" }]
maintainers = [{ name = "Domenic Barbuzzi", email = "domenic@neuralmagic.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pytest>=8",
    "uuid-utils>=0.10.0",
]

[project.urls]
Repository = "https://github.com/neuralmagic/pytest-nm-releng"

[project.entry-points.pytest11]
nm-releng = "pytest_nm_releng.plugin"

[tool.ruff.lint]
extend-select = ["I"]
